2000-04-21  Alex Roberts  <bse@error.fsnet.co.uk>

	* file.c: Fixed various spelling mistakes.
	(file_revert_do): added translation tags

2000-04-20  Chema Celorio  <chema@celorio.com>

	* print.c (print_document): Added gnome_print_beginpage
	  we can now navigate postscript output with gv

2000-04-20  Alex Roberts  <bse@error.fsnet.co.uk>

	* dialogs/about.glade: Added my email address.

2000-04-18  Chema Celorio  <chema@celorio.com>

	* print.c: added a print range to the print
	  dialog and moved the initialization for
	  printing.

2000-04-15  Chema Celorio  <chema@celorio.com>

	* dialogs/dialog-prefs.c (prepare_pagesize_page): new function
	(prepare_printing_page): load spin button with value

	* prefs.c (gedit_load_settings): Added paper stuff
	(gedit_save_settings): ditto

	* dialogs/dialog-prefs.c (apply_cb): ditto

2000-04-14  Chema Celorio  <chema@celorio.com>

	* gedit.c (main): if the file is empty, dont
	crash

2000-04-14  Jason Leach  <leach@wam.umd.edu>

	* window.c (gedit_window_set_status_bar): fixed a bug with status
	bar getting toggled in prefs, even when the user hasn't asked for
	it to toggle.

2000-04-14  Chema Celorio  <chema@celorio.com>

	* file.c: if the file is opened by another
	app, let the user know.

2000-04-14  Jason Leach  <leach@wam.umd.edu>

	* view.c (gedit_event_button_press): made private
	(gedit_event_key_press): ditto
	(view_list_erase): ditto
	(gedit_event_key_press): fix ALT-F menu accessing again...

2000-04-13  Chema Celorio  <chema@celorio.com>

	* print.c (print_setfont): new function
	finish the printing prefs stuff

2000-04-13  Chema Celorio  <chema@celorio.com>

	* utils.c (gtk_radio_button_select): created, copied
	from gnumeric
	(gtk_radio_group_get_selected): ditto

	* dialogs/dialog-prefs.c : add printing stuff,
	still need to do the print.c part tho

	* dialogs/dialog-search.c (search_dialog_button_cb): if
	not doc is open, return.
	(search_cb): ditto
