@@ -8,7 +8,7 @@
 
 ** Jason **
 [ ] New webpage
-[ ] Hack around the problem with recently used files, maybe we should
+[X] Hack around the problem with recently used files, maybe we should
     do all the code for that and not use gnome-history
 [X] Fix the bug reported in www.freshmeat.net, when a user compiles
     with --disable-gnome
@@ -55,14 +55,13 @@ Medium tasks
  * Add more options to the Preferences
  * Auto-save options (configurable timeout in prefs)
  * Add plugin to allow posting a document to a newsgroup.
- * Make the column indicator accurate (if possible)
-   ( I think we will solve this after porting to TkText )
  * Get some decent documentation
 
 Big/hard tasks
 
  * Port to TkText
  * Better line counting (might be easier after porting to TkText)
+ * Better column counting (might be easier after porting to TkText)
  * regex searching
  * Syntax Highlighting (plugin?)
 
