@@ -21,7 +21,6 @@
 
 #include <config.h>
 #include <gnome.h>
-#include <libgnome/gnome-history.h>
 
 #include "gedit.h"
 #include "document.h"
@@ -39,6 +38,128 @@ static void recent_cb (GtkWidget *w, gedit_data *data);
        void recent_add (char *filename);
 
 
+GList *history_list = NULL;
+
+static GList *
+history_get_list (void)
+{
+        gchar *filename, *key;
+        gint max_entries, i;
+        gboolean do_set = FALSE;
+
+	if (history_list)
+		return history_list;
+
+	gnome_config_push_prefix ("/gedit/History/");
+
+        /* Get maximum number of history entries.  Write default value to 
+         * config file if no entry exists. */
+        max_entries = gnome_config_get_int_with_default ("MaxFiles=4", &do_set);        if (do_set)
+                gnome_config_set_int ("MaxFiles", 4);
+
+        /* Read the history filenames from the config file */
+        for (i = 0; i < max_entries; i++)
+	{
+                key = g_strdup_printf ("File%d", i);
+                filename = gnome_config_get_string (key);
+                if (filename == NULL)
+		{
+			/* Ran out of filenames. */
+			g_free (key);
+			break;
+                }
+                history_list = g_list_append (history_list, filename);
+                g_free (key);
+        }
+        gnome_config_pop_prefix ();
+
+        return history_list;
+}
+
+/**
+ * history_update_list:
+ * @filename: 
+ * 
+ * This function updates the history list.  The return value is a 
+ * pointer to the filename that was removed, if the list was already full
+ * or NULL if no items were removed.
+ * 
+ * Return value: 
+ **/
+gchar *
+history_update_list (gchar *filename)
+{
+        gchar *name, *old_name = NULL;
+        GList *l = NULL;
+        GList *new_list = NULL;
+        gint max_entries, count = 0;
+        gboolean do_set = FALSE;
+        gboolean found = FALSE;
+
+        g_return_val_if_fail (filename != NULL, NULL);
+
+        /* Get maximum list length from config */
+        gnome_config_push_prefix ("/gedit/History/");
+        max_entries = gnome_config_get_int_with_default ("MaxFiles=4", &do_set);
+	if (do_set)
+                gnome_config_set_int ("MaxFiles", max_entries);
+        gnome_config_pop_prefix ();
+
+        /* Check if this filename already exists in the list */
+        for (l = history_list; l && (count < max_entries); l = l->next)
+	{
+                if (!found && (!strcmp ((gchar *)l->data, filename)
+			       || (count == max_entries - 1)))
+		{
+                        /* This is either the last item in the list, or a
+                         * duplicate of the requested entry. */
+                        old_name = (gchar *)l->data;
+                        found = TRUE;
+                }
+		else  /* Add this item to the new list */
+                        new_list = g_list_append (new_list, l->data);
+
+                count++;
+        }
+
+        /* Insert the new filename to the new list and free up the old list */
+        name = g_strdup (filename);
+        new_list = g_list_prepend (new_list, name);
+        g_list_free (history_list);
+        history_list = new_list;
+
+        return old_name;
+}
+
+/* Write contents of the history list to the configuration file. */
+void
+history_write_config (void)
+{
+        gchar *key; 
+        GList *l;
+        gint max_entries, i = 0;
+
+        if (history_list == NULL)
+		return;
+
+        max_entries = gnome_config_get_int ("/gedit/History/MaxFiles=4");
+        gnome_config_clean_section ("/gedit/History");
+        gnome_config_push_prefix ("/gedit/History/");
+        gnome_config_set_int ("MaxFiles", max_entries);
+
+        for (l = history_list; l; l = l->next) {
+                key = g_strdup_printf ("File%d", i++);
+                gnome_config_set_string (key, (gchar *)l->data);
+                g_free (l->data);
+                g_free (key);
+        }
+	gnome_config_sync ();
+        gnome_config_pop_prefix ();
+
+        g_list_free (history_list);
+        history_list = NULL;
+}
+
 /* Update the graphical part of the recently-used menu */
 static void
 recent_update_menus (GnomeApp *app, GList *recent_files)
@@ -51,14 +172,14 @@ recent_update_menus (GnomeApp *app, GList *recent_files)
 	g_return_if_fail (app != NULL);
 
 	if (settings->num_recent)
-		gnome_app_remove_menu_range (app, _("_File/"), 6, settings->num_recent + 1);
+		gnome_app_remove_menu_range (app, _("_File/"), 6, 5);
 
 	if (recent_files == NULL)
 		return;
 
 	/* insert a separator at the beginning */
 	menu = g_malloc0 (2 * sizeof (GnomeUIInfo));
-	path = g_new (gchar, strlen (_("_File")) + strlen ("<Separator>") + 3 );
+	path = g_new (gchar, strlen (_("_File")) + strlen ("<Separator>") + 2);
 	sprintf (path, "%s/%s", _("_File"), "<Separator>");
 	menu->type = GNOME_APP_UI_SEPARATOR;
 
@@ -86,12 +207,10 @@ recent_update_menus (GnomeApp *app, GList *recent_files)
 		(menu + 1)->type = GNOME_APP_UI_ENDOFINFO;
 	
 		gnome_app_insert_menus (GNOME_APP(app), path, menu);
-		g_free (g_list_nth_data (recent_files, i));	 
 	}
 	
 	g_free (menu);
 	settings->num_recent = g_list_length (recent_files);
-	g_list_free (recent_files);
 
 	g_free (path);
 }
@@ -113,9 +232,8 @@ recent_cb (GtkWidget *widget, gedit_data *data)
 	else
 	{
 		g_print ("recent_cb(): file unable to open\n");
-		/* FIXME :
-		   If an error was encountered the delete the entry
-		   from the menu ... Chema  */
+		/* FIXME: If an error was encountered the delete the
+		   entry from the menu */
 	}
 }
 
@@ -131,64 +249,9 @@ void
 recent_update (GnomeApp *app)
 {
 	GList *filelist = NULL;
-	GList *gnome_recent_list;
-	GnomeHistoryEntry histentry;
-	char *filename;
-	int i, j;
-	int nrecentdocs = 0;
 
-	filelist = NULL;
+	filelist = history_get_list ();
 
-	gnome_recent_list = gnome_history_get_recently_used ();
-
-	if (g_list_length (gnome_recent_list) <= 0)
-	{
-		return;
-	}
-
-	for (i = g_list_length (gnome_recent_list) - 1; i >= 0; i--)
-	{
-		histentry = g_list_nth_data (gnome_recent_list, i);
-     
-		if (strcmp ("gedit", histentry->creator) != 0)
-			break;
-
-		/* FIXME : if file_1 is in the 3rd line of the recent
-		   files and I reopen it, it should be in the 1st line now.Chema*/
-		if (g_list_length (filelist) > 0)
-		{
-			for (j = g_list_length (filelist) - 1; j >= 0; j--)
-			{
-				if (strcmp (histentry->filename, g_list_nth_data (filelist, j)) == 0)
-				{
-					filelist = g_list_remove (filelist, g_list_nth_data (filelist, j));
-					nrecentdocs--;
-				}
-			}
-		}
-
-		filename = g_malloc0 (strlen (histentry->filename) + 1);
-		strcpy (filename, histentry->filename);
-		filelist = g_list_append (filelist, filename);
-		nrecentdocs++;
-				
-		/* For recent-directories, not yet fully implemented...
-		   end_path = strrchr (histentry->filename, '/');
-		   if (end_path) {
-		   for (i = 0; i < strlen (histentry->filename); i++)
-		   if ((histentry->filename + i) == end_path)
-		   break;
-		   directory = g_malloc0 (i + 2);
-		   strcat (directory, histentry->filename, i);
-		   }*/
-                   
-		if (nrecentdocs == MAX_RECENT)
-/*			if (g_list_length (filelist) == MAX_RECENT) */
-				break;
-	}
-	
-	gnome_history_free_recently_used_list (gnome_recent_list);
-	
 	recent_update_menus (app, filelist);
 }
 
@@ -201,10 +264,12 @@ recent_update (GnomeApp *app)
 void
 recent_add (char *filename)
 {
+	gchar *del_name;
+
 	g_return_if_fail (filename != NULL);
 
-	gnome_history_recently_used (filename, "text/plain",
-				     "gedit", "gedit_document");
+	del_name = history_update_list (filename);
+	g_free (del_name);
 }
 
 
