@@ -1,3 +1,8 @@
+2000-04-25  Jason Leach  <leach@wam.umd.edu>
+
+	* recent.c: Replaced the use of gnome-history with custom routines
+	to store history in ~/.gnome/gedit, much better.
+
 2000-04-21  Alex Roberts  <bse@error.fsnet.co.uk>
 
 	* file.c: Fixed various spelling mistakes.
